Added Webpack module bundle, some project addaptations for it, js scripts improvements

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # PyCharm
 .idea/
 
+# Webpack
+webpack-stats.json
+
 
 # Created by https://www.gitignore.io/api/macos,python,pycharm,virtualenv,django,node
 
