--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf build/*",
-    "build": "npm run clean && npx webpack --mode development",
-    "build-prod": "npm run clean && npx webpack --mode production",
+    "build": "npm run clean && NODE_ENV=development npx webpack --mode development",
+    "build-prod": "npm run clean && NODE_ENV=production npx webpack --mode production",
     "server": "webpack-dev-server --hot --inline --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
